--- a/FL12_HW3/homework/css/style2.css
+++ b/FL12_HW3/homework/css/style2.css
@@ -64,7 +64,7 @@ body {
   .header_text {
     color: white;
     padding-top: 38px;
-    width: 580px;
+    white-space: pre-line;
     line-height: 22px;
     font-family: "Fresca", sans-serif;
     color: rgba(255, 255, 255, 0.836); }
