--- a/FL12_HW3/homework/scss/_main.scss
+++ b/FL12_HW3/homework/scss/_main.scss
@@ -120,7 +120,7 @@ body {
   &_text {
     color: $logo_color;
     padding-top: 38px;
-    width: 580px;
+    white-space: pre-line;
     line-height: 22px;
     @include switchFont;
   }
